<resources>
    <string name="app_name">ProyectoMoviles</string>
    <string name="imagen_de_categoria">Imagen del Categoría</string>

    <!-- Login and signup activity -->
    <string name="title_activity_login">Validando usuario</string>
    <string name="title_activity_signup">Registrando usuario</string>
    <string name="title_activity_main">Lista de Investigaciones</string>
    <string name="title_activity_mainMain">Investigaciones Académicas</string>
    <string name="title_activity_profile">Perfil de Usuario</string>


    <string name="prompt_name">Nombre</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_anhoscolar">Año Escolar</string>
    <string name="prompt_grade">Grado</string>
    <string name="prompt_intro">Introducción personal</string>

    <string name="prompt_registerhere">Registrate aquí</string>
    <string name="prompt_register">Registrarse</string>
    <string name="prompt_login">Ingresar</string>
    <string name="prompt_select_image">Seleccionar imagen</string>

    <string name="prompt_table_tittle">Titulos de la investigación</string>
    <string name="prompt_table_area">Área de interés</string>
    <string name="prompt_table_autorEmail">Correo del autor</string>
    <string name="prompt_table_description">Descripción</string>
    <string name="prompt_table_pdf">Descargar PDF</string>"


    <string-array name="grade_array">
        <item>Primer Ciclo</item>
        <item>Segundo Ciclo</item>
        <item>Tercer Ciclo</item>
        <item>Cuarto Ciclo</item>
    </string-array>

    <string-array name="areas_array">
        <item>Matemáticas</item>
        <item>Química</item>
        <item>Artes</item>
        <item>Biología</item>
        <item>Ambiente</item>
    </string-array>

</resources>