<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/title_activity_signup"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="25dp" />

        <EditText
            android:id="@+id/txtRNombre"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/txtREmail"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/txtRContra"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/txtRAnho"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_anhoscolar"
            android:inputType="number"
            android:layout_marginBottom="15dp" />

        <Spinner
            android:id="@+id/spnGrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/grade_array"
            android:minHeight="48dp"
            android:padding="8dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_profile"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/btnFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_select_image"
            android:layout_marginBottom="15dp" />

        <EditText
            android:id="@+id/txtIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_intro"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top"
            android:layout_marginBottom="25dp" />

        <Button
            android:id="@+id/btnRegistrarU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_register" />

    </LinearLayout>
</ScrollView>