<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/title_activity_mainMain"
        app:titleTextColor="@android:color/white" />



    <!-- Header (simula el menu-component) -->


    <!-- Section for filtering options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <Spinner
            android:id="@+id/spinnerArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:padding="8dp"
            android:entries="@array/areas_array" />



        <Spinner
            android:id="@+id/spinnerGrado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:padding="8dp"
            android:entries="@array/grade_array" />

        <Button
            android:id="@+id/btnResetArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:textColor="@color/white"
            android:backgroundTint="@color/danger_color" />


    </LinearLayout>



    <!-- Table for displaying investigations -->
    <TableLayout
        android:id="@+id/investigationsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:stretchColumns="*" >


        <TableRow>
            <TextView android:text="@string/prompt_table_tittle" />
            <TextView android:text="@string/prompt_table_area" />
            <TextView android:text="@string/prompt_table_autorEmail" />
            <TextView android:text="@string/prompt_table_description" />
            <TextView android:text="@string/prompt_table_pdf" />
        </TableRow>

        <!-- Dynamic rows will be added here programmatically in the Java/Kotlin code -->
    </TableLayout>

</LinearLayout>
